Styles: fixed spacing and font sizes for related product

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,6 +52,7 @@ p {
 
   &:last-child{
     background-color: $white;
+    padding-bottom: $space-6;
   }
 }
 
